--- a/process_dataset.ipynb
+++ b/process_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 18,
    "id": "a8832a4f",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "0a711c95",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "c0951138",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "b719ead9",
    "metadata": {},
    "outputs": [],
@@ -256,6 +256,207 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "62117ec4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "890c66a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Hello!! Here you can interact with the NER model (Fine-Tuned RoBERTa)!!!!\n",
+      "To make a query just enter some sentence and the model will show you what words are Mountains and what are not.\n",
+      "(The mountains will be colored in blue)\n",
+      "\n",
+      "Below are some EXAMPLES if you cannot come up with one:\n",
+      "\n",
+      "    * \"So how it was on Kilimanjaro?\"\n",
+      "\n",
+      "    * \"White Glacier is a broad westward flowing tributary glacier which joins the Land Glacier on the north side of Mount McCoy in Marie Byrd Land .\"\n",
+      "\n",
+      "    * \"Other notable sections of the cemetery are the cemetery of the Finnish Guard , the Artist 's Hill and the Statesmen 's Grove .\"\n",
+      "    \n",
+      "    * \"Why dont we hang out together? Lets go on a trip. What about Alpas?\"\n",
+      "\n",
+      "Enter path to the model (recommended to use RoBERTa version):/home/user/Стільниця/python/jpnb_projects/NER_mountain/data/models/roberta_fine_tuned.pt\n",
+      "Enter the sentence you want to pass into the model:So how it was on Kilimanjaro?\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Keyword arguments {'clean_up_tokenization_spaces': True} not recognized.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m\n",
+      "HERE IS THE RESULT:\n",
+      "\n",
+      "\u001b[0mSo \u001b[0m how \u001b[0m it \u001b[0m was \u001b[0m on "
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'AnsiFore' object has no attribute 'ORANGE'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[60], line 69\u001b[0m\n\u001b[1;32m     65\u001b[0m             \u001b[38;5;28mprint\u001b[39m(Style\u001b[38;5;241m.\u001b[39mRESET_ALL \u001b[38;5;241m+\u001b[39m decoded_word, end\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m\"\u001b[39m)    \n\u001b[1;32m     68\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;18m__name__\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m__main__\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m---> 69\u001b[0m     \u001b[43minference_ner\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[60], line 63\u001b[0m, in \u001b[0;36minference_ner\u001b[0;34m()\u001b[0m\n\u001b[1;32m     61\u001b[0m decoded_word \u001b[38;5;241m=\u001b[39m tokenizer\u001b[38;5;241m.\u001b[39mdecode(token)\n\u001b[1;32m     62\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m label:\n\u001b[0;32m---> 63\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[43mFore\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mORANGE\u001b[49m \u001b[38;5;241m+\u001b[39m decoded_word, end\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     64\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     65\u001b[0m     \u001b[38;5;28mprint\u001b[39m(Style\u001b[38;5;241m.\u001b[39mRESET_ALL \u001b[38;5;241m+\u001b[39m decoded_word, end\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'AnsiFore' object has no attribute 'ORANGE'"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import os\n",
+    "from transformers import RobertaTokenizer\n",
+    "import peft\n",
+    "from colorama import Fore, Back, Style, init\n",
+    "\n",
+    "\n",
+    "GREETING_TEXT = \"\"\"\n",
+    "Hello!! Here you can interact with the NER model (Fine-Tuned RoBERTa)!!!!\n",
+    "To make a query just enter some sentence and the model will show you what words are Mountains and what are not.\n",
+    "(The mountains will be colored in blue)\n",
+    "\n",
+    "Below are some EXAMPLES if you cannot come up with one:\n",
+    "\n",
+    "    * \"So how it was on Kilimanjaro?\"\n",
+    "\n",
+    "    * \"White Glacier is a broad westward flowing tributary glacier which joins the Land Glacier on the north side of Mount McCoy in Marie Byrd Land .\"\n",
+    "\n",
+    "    * \"Other notable sections of the cemetery are the cemetery of the Finnish Guard , the Artist 's Hill and the Statesmen 's Grove .\"\n",
+    "    \n",
+    "    * \"Why dont we hang out together? Lets go on a trip. What about Alpas?\"\n",
+    "\"\"\"\n",
+    "MAX_LENGTH = 32\n",
+    "\n",
+    "def inference_ner():\n",
+    "    print(GREETING_TEXT)\n",
+    "    \n",
+    "    path_to_model = input(\"Enter path to the model (recommended to use RoBERTa version):\")\n",
+    "    sentence = input(\"Enter the sentence you want to pass into the model:\")\n",
+    "    \n",
+    "    tokenizer = RobertaTokenizer.from_pretrained('roberta-base')\n",
+    "    tokenized_sentence = tokenizer(sentence, \n",
+    "                                   truncation=True,\n",
+    "                                   padding=\"max_length\",\n",
+    "                                   max_length=MAX_LENGTH,\n",
+    "                                   return_tensors=\"pt\",\n",
+    "                                   return_attention_mask=True,\n",
+    "                                   clean_up_tokenization_spaces=True)\n",
+    "    \n",
+    "    model = torch.load(path_to_model)\n",
+    "    model.eval()\n",
+    "    \n",
+    "    with torch.inference_mode():\n",
+    "        outputs = model(input_ids=tokenized_sentence[\"input_ids\"],\n",
+    "                        attention_mask=tokenized_sentence[\"attention_mask\"])\n",
+    "\n",
+    "    outputs = torch.softmax(outputs.logits, dim=2).argmax(dim=2)\n",
+    "    \n",
+    "        \n",
+    "    outputs = list(outputs.squeeze().cpu().numpy())\n",
+    "    tokenized_sentence = list(tokenized_sentence[\"input_ids\"].squeeze().cpu().numpy())\n",
+    "    \n",
+    "    print(Fore.GREEN + \"\\nHERE IS THE RESULT:\\n\")\n",
+    "    \n",
+    "    for i in range(len(outputs)):\n",
+    "        label = outputs[i]\n",
+    "        token = tokenized_sentence[i]\n",
+    "        if token in [0, 1, 2]:\n",
+    "            continue\n",
+    "            \n",
+    "        decoded_word = tokenizer.decode(token)\n",
+    "        if label:\n",
+    "            print(Fore.ORANGE + decoded_word, end=\" \")\n",
+    "        else:\n",
+    "            print(Style.RESET_ALL + decoded_word, end=\" \")    \n",
+    "    \n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    inference_ner()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "7c1fb8a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'home' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[16], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mhome\u001b[49m\u001b[38;5;241m/\u001b[39muser\u001b[38;5;241m/\u001b[39mСтільниця\u001b[38;5;241m/\u001b[39mpython\u001b[38;5;241m/\u001b[39mjpnb_projects\u001b[38;5;241m/\u001b[39mNER_mountain\u001b[38;5;241m/\u001b[39mdata\u001b[38;5;241m/\u001b[39mmodels\u001b[38;5;241m/\u001b[39mroberta_fine_tuned\u001b[38;5;241m.\u001b[39mpt()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'home' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "/home/user/Стільниця/python/jpnb_projects/NER_mountain/data/models/roberta_fine_tuned.pt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "171c64b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('This top , now known as Cadair Berwyn , is listed as Cadair Berwyn New Top on the Nuttall list .',\n",
+       " [0, 0, 0, 0, 0, 0, 1, 2, 0, 0, 0, 0, 1, 2, 2, 2, 0, 0, 0, 0, 0])"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset[\"train\"][\"sentence\"][24], dataset[\"train\"][\"labels\"][24]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "2c969601",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[93mfsdf\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Fore.LIGHTYELLOW_EX + \"fsdf\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e19a41c",
    "metadata": {},
    "outputs": [],
    "source": []
