--- a/process_dataset.ipynb
+++ b/process_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 40,
    "id": "a8832a4f",
    "metadata": {},
    "outputs": [],
@@ -10,17 +10,41 @@
     "import torch\n",
     "from transformers import RobertaTokenizerFast\n",
     "from datasets import load_dataset\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import os\n",
+    "import dotenv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 41,
+   "id": "267edeea",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dotenv.load_dotenv()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "id": "0a711c95",
    "metadata": {},
    "outputs": [],
    "source": [
-    "MAX_LENGTH=32"
+    "MAX_LENGTH=32\n",
+    "DATA_PATH = os.getenv(\"DATA_PATH\")"
    ]
   },
   {
@@ -80,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "9b267e10",
+   "id": "1860c01d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "096a1110",
+   "id": "da473c9f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,8 +204,8 @@
    "source": [
     "# save datasets\n",
     "\n",
-    "torch.save(train_dataset, \"data/processed_train_dataset.pt\")\n",
-    "torch.save(test_dataset, \"data/processed_test_dataset.pt\")"
+    "torch.save(train_dataset, os.path.join(DATA_PATH, \"processed_train_dataset.pt\"))\n",
+    "torch.save(test_dataset, os.path.join(DATA_PATH, \"processed_test_dataset.pt\"))"
    ]
   },
   {
@@ -212,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf09d6e9",
+   "id": "ee45a6c5",
    "metadata": {},
    "outputs": [],
    "source": []
