--- a/training_new_model.ipynb
+++ b/training_new_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "id": "6be71240",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,29 @@
     "from transformers import RobertaTokenizer\n",
     "import os\n",
     "from tqdm import tqdm\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import dotenv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "21dedf4c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dotenv.load_dotenv()"
    ]
   },
   {
@@ -41,12 +63,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "id": "ad4c9345",
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATA_PATH = \"data\"\n",
+    "DATA_PATH = os.getenv(\"DATA_PATH\")\n",
     "BATCH_SIZE = 64\n",
     "LR = 1e-3\n",
     "NUM_EPOCHS = 20\n",
