create readme file, add comments to code, improve inference.py, create Dockerfile

--- a/Additional_solutions.ipynb
+++ b/Additional_solutions.ipynb
@@ -48,7 +48,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# groq api (create .env file with appropriate parameters)\n",
     "GROQ_API = os.getenv(\"GROQ_API_KEY\")\n",
+    "\n",
+    "# prompts that are used later\n",
     "PROMPT_DATA = \"\"\"\n",
     "Generate NER data for mountains.\n",
     "Generate 3 sentences and 3 labels to them.\n",
@@ -119,6 +122,8 @@
     }
    ],
    "source": [
+    "# an easy way to generate data using LLMs\n",
+    "\n",
     "client = Groq(\n",
     "    api_key=GROQ_API,\n",
     ")\n",
@@ -168,6 +173,8 @@
     }
    ],
    "source": [
+    "# solve NER problem using LLMs \n",
+    "\n",
     "sentence = input(\"Enter the sentance:\").split()\n",
     "\n",
     "client = Groq(\n",
