--- a/process_dataset.ipynb
+++ b/process_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "id": "a8832a4f",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "id": "267edeea",
    "metadata": {},
    "outputs": [
@@ -27,12 +27,13 @@
        "True"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# load .env file\n",
     "dotenv.load_dotenv()"
    ]
   },
@@ -43,13 +44,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MAX_LENGTH=32\n",
+    "MAX_LENGTH = 32\n",
     "DATA_PATH = os.getenv(\"DATA_PATH\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "c0951138",
    "metadata": {},
    "outputs": [],
@@ -57,6 +58,27 @@
     "# Load the tokenizer for the RoBERTa model\n",
     "\n",
     "tokenizer = RobertaTokenizerFast.from_pretrained('roberta-base', add_prefix_space=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "4e75f7f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'input_ids': [0, 103, 3645, 2], 'attention_mask': [1, 1, 1, 1]}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokenizer(\"some sentence\")"
    ]
   },
   {
@@ -108,31 +130,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# function to prepare dataset for training \n",
+    "# function solves the problem of subtokens and special tokens\n",
+    "\n",
     "def prepare_dataset(data, tokenizer, max_length):\n",
+    "    # tokenize the dataset\n",
     "    tokenized_inputs = tokenizer(data[\"tokens\"],\n",
     "                                 truncation=True,\n",
     "                                 padding=\"max_length\",\n",
     "                                 max_length=MAX_LENGTH,\n",
     "                                 is_split_into_words=True,\n",
     "                                 return_tensors=\"pt\",\n",
-    "                                 return_attention_mask=True)\n",
+    "                                 return_attention_mask=True) \n",
     "    \n",
-    "    new_labels = []\n",
+    "    new_labels = [] # processed labels\n",
     "    \n",
     "    for i, label in enumerate(data[\"labels\"]):\n",
-    "        word_id = tokenized_inputs.word_ids(batch_index=i)\n",
-    "        \n",
-    "        prev_word_id = None\n",
-    "        \n",
-    "        new_label = []\n",
+    "        word_id = tokenized_inputs.word_ids(batch_index=i) # get word ids \n",
+    "                \n",
+    "        new_label = [] # processed one label\n",
     "        for j in word_id:\n",
     "            if j is None:\n",
-    "                new_label.append(0)\n",
+    "                new_label.append(0) # give label 0 for spacial tokens (<pad>, <s>, </s>)\n",
     "            else:\n",
-    "                new_label.append(int(label[j] != 0))\n",
+    "                new_label.append(int(label[j] != 0)) # for each subword give its word label\n",
     "        new_labels.append(new_label)\n",
     "    \n",
-    "    new_labels = torch.Tensor(new_labels)\n",
+    "    new_labels = torch.Tensor(new_labels) # convert to Tensor\n",
     "    tokenized_inputs[\"labels\"] = new_labels\n",
     "    \n",
     "    return tokenized_inputs"
@@ -145,6 +169,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# create torch dataset object\n",
+    "\n",
     "class CustomRoBERTaDataset(torch.utils.data.Dataset):\n",
     "    def __init__(self, input_ids, attention_mask, labels, max_length):\n",
     "        self.input_ids = input_ids\n",
@@ -169,10 +195,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# train data\n",
     "train_data = prepare_dataset(data=dataset[\"train\"],\n",
     "                             tokenizer=tokenizer,\n",
     "                             max_length=MAX_LENGTH)\n",
     "\n",
+    "# test data\n",
     "test_data = prepare_dataset(data=dataset[\"test\"],\n",
     "                             tokenizer=tokenizer,\n",
     "                             max_length=MAX_LENGTH)"
@@ -226,6 +254,8 @@
     }
    ],
    "source": [
+    "# calculate the percentage of instances without mentioning mountains\n",
+    "\n",
     "s = 0\n",
     "for lst in dataset[\"train\"][\"labels\"]:\n",
     "    lst = list(map(lambda x: int(x != 0), lst))\n",
