--- a/training_new_model.ipynb
+++ b/training_new_model.ipynb
@@ -34,6 +34,8 @@
     }
    ],
    "source": [
+    "# load .env\n",
+    "\n",
     "dotenv.load_dotenv()"
    ]
   },
@@ -44,6 +46,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# custom dataset class\n",
+    "\n",
     "class CustomRoBERTaDataset(torch.utils.data.Dataset):\n",
     "    def __init__(self, input_ids, attention_mask, labels, max_length):\n",
     "        self.input_ids = input_ids\n",
@@ -106,9 +110,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# create the custom transformer model class\n",
+    "\n",
     "class CustomTransformerEncForSequenceCLS(torch.nn.Module):\n",
     "    def __init__(self, d_model, nhead, ff, num_blocks, vocab_len, seq_len, device=\"cpu\"):\n",
     "        super().__init__()\n",
+    "        \n",
+    "        # hyper-parameters\n",
     "\n",
     "        self.device = device\n",
     "        self.d_model = d_model\n",
@@ -118,9 +126,11 @@
     "        self.nhead = nhead\n",
     "        self.ff = ff\n",
     "\n",
+    "        # Embeddings\n",
     "        self.emb = torch.nn.Embedding(self.vocab_len, self.d_model)\n",
     "        self.pos_emb = torch.nn.Embedding(self.seq_len, self.d_model)\n",
     "\n",
+    "        # build in transformer\n",
     "        self.transformer = torch.nn.TransformerEncoder(torch.nn.TransformerEncoderLayer(\n",
     "            d_model=self.d_model,\n",
     "            nhead=self.nhead,\n",
@@ -129,6 +139,7 @@
     "            dropout=0.7\n",
     "        ), num_layers=self.num_blocks)\n",
     "\n",
+    "        # linear output for softmax (Cross entropy loss includes softmax)\n",
     "        self.out = torch.nn.Linear(self.d_model, 2)\n",
     "\n",
     "\n",
@@ -138,6 +149,8 @@
     "        x = x + self.pos_emb(torch.arange(self.seq_len).unsqueeze(0).to(self.device))[:, :x.shape[1]]\n",
     "\n",
     "        res = self.transformer(x) # (batch, seq_len, d_model)\n",
+    "        \n",
+    "        # make view of processed input for last linear layer to process each token separetaly (batch * seq_len)\n",
     "        res = self.out(res.view(-1, self.d_model)).view(-1, self.seq_len, 2)\n",
     "\n",
     "        return res"
@@ -150,6 +163,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# create the model\n",
+    "\n",
     "model = CustomTransformerEncForSequenceCLS(d_model=128,\n",
     "                                           nhead=4,\n",
     "                                           ff=512,\n",
@@ -197,6 +212,8 @@
     }
    ],
    "source": [
+    "# change the model to cuda if available\n",
+    "\n",
     "model.to(device)"
    ]
   },
@@ -207,6 +224,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# load processed dataset\n",
+    "\n",
     "test_dataset = torch.load(os.path.join(DATA_PATH, \"processed_test_dataset.pt\"))\n",
     "train_dataset = torch.load(os.path.join(DATA_PATH, \"processed_train_dataset.pt\"))"
    ]
@@ -218,6 +237,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# create data loaders\n",
+    "\n",
     "test_dataload = torch.utils.data.DataLoader(dataset=test_dataset,\n",
     "                                            batch_size=BATCH_SIZE,\n",
     "                                            shuffle=False)\n",
@@ -543,8 +564,12 @@
     }
    ],
    "source": [
-    "# Set up the optimizer\n",
+    "# Set up the optimizer and loss function\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=LR)\n",
+    "\n",
+    "# set weight in loss function to (1, 30) so that 1-labels are 30x more valuable during training\n",
+    "# the intuition is behind the max length of sequence (assuming that there is approximately one 1-label per sequence)\n",
+    "# this will help the model to not overtrain to 0-labels\n",
     "loss_f = torch.nn.CrossEntropyLoss(weight=torch.Tensor([1, 30]).to(torch.float64).to(device))\n",
     "\n",
     "history_loss = []\n",
@@ -555,6 +580,7 @@
     "    total_loss = 0\n",
     "\n",
     "    for batch in tqdm(train_dataload):\n",
+    "        # get batch of data\n",
     "        input_ids = batch['input_ids'].to(device)\n",
     "        labels = batch['labels'].to(device).to(torch.int64)\n",
     "        \n",
@@ -562,6 +588,7 @@
     "        # Forward pass\n",
     "        outputs = model(x=input_ids).to(torch.float64)\n",
     "\n",
+    "        # calculate loss for each token in the batch\n",
     "        loss = loss_f(outputs.view(-1, 2), labels.view(-1))\n",
     "        total_loss += loss.item()\n",
     "        history_loss.append(loss.item())\n",
@@ -594,6 +621,8 @@
     }
    ],
    "source": [
+    "# visualizing loss during training steps\n",
+    "\n",
     "plt.figure(figsize=(20, 10))\n",
     "\n",
     "plt.plot(history_loss)\n",
@@ -609,22 +638,38 @@
    "outputs": [],
    "source": [
     "def acc(model, dataloader):\n",
+    "    # Set the model to evaluation mode. This disables dropout and other training-specific layers.\n",
     "    model.eval()\n",
     "\n",
-    "    total_acc = 0\n",
+    "    total_acc = 0  # Initialize a variable to keep track of the total accuracy.\n",
     "\n",
+    "    # Iterate over the batches in the dataloader.\n",
     "    for batch in iter(dataloader):\n",
+    "        # Move the input_ids and labels tensors to the device (CPU or GPU) being used.\n",
     "        input_ids = batch['input_ids'].to(device)\n",
     "        labels = batch['labels'].to(device).to(torch.int64)\n",
     "\n",
+    "        # Perform inference without calculating gradients (saves memory and speeds up computation).\n",
     "        with torch.inference_mode():\n",
+    "            # Get the model's output for the input_ids. \n",
+    "            # The output is converted to float64 to maintain consistency in calculations.\n",
     "            outputs = model(x=input_ids).to(torch.float64)\n",
     "\n",
+    "        # Apply the softmax function to get probabilities and use argmax to get predicted class indices.\n",
+    "        # The outputs tensor has shape (batch_size, seq_length, num_classes).\n",
     "        outputs = torch.softmax(outputs, dim=2).argmax(dim=2)\n",
+    "        \n",
+    "        # Calculate accuracy by comparing the predicted labels with the actual labels.\n",
+    "        # Convert the boolean result to float, then take the mean to get the accuracy for the batch.\n",
     "        acc = (outputs == labels).to(float).mean()\n",
+    "        \n",
+    "        # Accumulate the accuracy for each batch.\n",
     "        total_acc += acc\n",
     "\n",
+    "    # Calculate the average accuracy across all batches.\n",
     "    total_acc /= len(dataloader)\n",
+    "    \n",
+    "    # Return the average accuracy.\n",
     "    return total_acc"
    ]
   },
@@ -646,6 +691,7 @@
     }
    ],
    "source": [
+    "# avg acc on training dataset\n",
     "acc(model, train_dataload)"
    ]
   },
@@ -667,6 +713,7 @@
     }
    ],
    "source": [
+    "# avg acc on test dataset\n",
     "acc(model, test_dataload)"
    ]
   },
@@ -678,23 +725,39 @@
    "outputs": [],
    "source": [
     "def avg_pos_true(model, dataloader):\n",
+    "    # Set the model to evaluation mode. This disables training-specific layers such as dropout.\n",
     "    model.eval()\n",
     "\n",
-    "    total_pos_true = 0\n",
+    "    total_pos_true = 0  # Initialize a variable to keep track of the total positive true rate.\n",
     "\n",
+    "    # Iterate over the batches in the dataloader.\n",
     "    for batch in iter(dataloader):\n",
+    "        # Move the input_ids and labels tensors to the device (CPU or GPU) being used.\n",
     "        input_ids = batch['input_ids'].to(device)\n",
     "        labels = batch['labels'].to(device).to(torch.int64)\n",
     "\n",
-    "\n",
+    "        # Perform inference without calculating gradients (saves memory and speeds up computation).\n",
     "        with torch.inference_mode():\n",
+    "            # Get the model's output for the input_ids. \n",
+    "            # The output is converted to float64 to maintain consistency in calculations.\n",
     "            outputs = model(x=input_ids).to(torch.float64)\n",
     "\n",
+    "        # Apply the softmax function to get probabilities and use argmax to get the predicted class indices.\n",
+    "        # The outputs tensor has shape (batch_size, seq_length, num_classes).\n",
+    "        # Select the predictions corresponding to the positions where the actual label is positive.\n",
     "        outputs = torch.softmax(outputs, dim=2).argmax(dim=2)[labels.to(torch.bool)]\n",
+    "        \n",
+    "        # Calculate the proportion of true positives by comparing predicted values with 1.\n",
+    "        # Convert the boolean result to float and calculate the mean for this batch.\n",
     "        pos_true = (outputs == 1).to(float).mean()\n",
+    "        \n",
+    "        # Accumulate the positive true rate for each batch.\n",
     "        total_pos_true += pos_true\n",
     "\n",
+    "    # Calculate the average positive true rate across all batches.\n",
     "    total_pos_true /= len(dataloader)\n",
+    "    \n",
+    "    # Return the average positive true rate.\n",
     "    return total_pos_true"
    ]
   },
@@ -716,6 +779,7 @@
     }
    ],
    "source": [
+    "# avg pos true on training dataset\n",
     "avg_pos_true(model, train_dataload)"
    ]
   },
@@ -737,6 +801,7 @@
     }
    ],
    "source": [
+    "# avg pos true on test  dataset\n",
     "avg_pos_true(model, test_dataload)"
    ]
   },
@@ -747,7 +812,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "torch.save(model, os.path.join(DATA_PATH, \"models\", \"custom_transformer_trained.pt\"))"
+    "# save the model\n",
+    "torch.save(model.cpu(), os.path.join(DATA_PATH, \"models\", \"custom_transformer_trained.pt\"))"
    ]
   },
   {
