--- a/fine_tuning_RoBERTa(colab).ipynb
+++ b/fine_tuning_RoBERTa(colab).ipynb
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "id": "pB-WAENWN1tc"
    },
@@ -1159,10 +1159,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.save_pretrained(os.path.join(DATA_PATH, \"roberta\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "S2AInpNaadAa"
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
